# Mission-Control

./: .gitignore  MissionControl.desktop  emoji-test.html  package-lock.json  package.json  start_mission.sh
backend/: 1memo.md  Cargo.toml  README.md  agent_system_instructions.md  backend_migration_context.md  browser_bridge.py  implementation_plan.md  processed_ids.txt  sentry.py  server.py  start.sh  start_rust.sh  task.md  test_concurrency.py  test_state_integration.py  walkthrough.md
backend/backend/fragments/: Log_Claude_20260129_133230.json  Log_Qwen3_20260129_133230.json
backend/briefings/: strategic_brief.md  tactical_brief.md
backend/browser_data/: Local State
backend/browser_data/Default/: Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Shortcuts  Top Sites  TransportSecurity  Web Data  passkey_enclave_state  trusted_vault.pb
backend/browser_data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  f_000025  f_000026  (+12 more)
backend/browser_data/GraphiteDawnCache/: data_1  index
backend/browser_data/ShaderCache/: data_0  (+3 more)
backend/src/: api.rs  bridge.rs  handle_docs.rs  lib.rs  models.rs  sentry.rs  stealth.js  storage.rs  system.rs
(+2925 files in other folders)
